--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,6 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-codec-1.4.jar=lib/commons-codec-1.4.jar
 file.reference.gcm-server-1.0.2.jar=lib/pushNotification/gcm-server-1.0.2.jar
 file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=lib/hibernateJpa/hibernate-jpa-2.0-api-1.0.1.Final.jar
 file.reference.hibernate-tools-3.6.0.CR1.jar=lib/hibernateJpa/hibernate-tools-3.6.0.CR1.jar
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.log4j-api-2.5.jar}:\
     ${file.reference.log4j-core-2.5.jar}:\
-    ${reference.LoadConfiguration.jar}
+    ${reference.LoadConfiguration.jar}:\
+    ${file.reference.commons-codec-1.4.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
